--- a/Server/config/config.json
+++ b/Server/config/config.json
@@ -11,13 +11,10 @@
     "password": "postgres",
     "database": "ApotikDB_test",
     "host": "localhost",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "logging": false
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "use_env_variable": "DATABASE_URL"
   }
 }
